# events_project

./: .coveragerc  .env  .gitignore  .requirements.txt  Dockerfile  README.md  celerybeat-schedule  docker-compose.yaml  pyproject.toml  requirements.txt
core/: celery.py  settings.py  urls.py
events/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
events/migrations/: 0001_initial.py  0002_emailsettings_alter_weatherdata_options_and_more.py  0003_alter_event_options_alter_eventimage_options_and_more.py
