[project]
name = "events-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.2",
    "coverage>=7.13.4",
    "django>=4.2",
    "django-celery-beat>=2.9.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.1.0",
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "whitenoise[brotli]>=6.12.0",
]
